# inqjet

./: .gitignore  BENCHMARKS.md  Cargo.toml  README  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
examples/: bench_producer_latency.rs
inqjet/: Cargo.toml  README.md
inqjet-macros/: Cargo.toml
inqjet-macros/src/: lib.rs
inqjet/examples/: demo.rs
inqjet/src/: archive.rs  consumer.rs  format.rs  lib.rs  logger.rs  pod.rs  record.rs
inqjet/tests/: backpressure_drop.rs  bench_inqjet.rs  bench_tracing.rs  hot_macro_prototype.rs  integration.rs  log_bridge.rs
inqjet/tests/common/: mod.rs
src/: channel.rs  consumer.rs  lib.rs  logger.rs  notifier.rs  pool.rs  rb.rs  writer.rs
