[package]
name = "inqjet"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
log = { version = "0.4.27", features = ["std"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros"] }

[dev-dependencies]
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
