[workspace]
members = ["inqjet", "inqjet-macros"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Abso1ut3Zer0"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Abso1ut3Zer0/inqjet"
repository = "https://github.com/Abso1ut3Zer0/inqjet"
