[package]
name = "inqjet-macros"
version = "0.2.0"
edition = "2024"
authors = ["Abso1ut3Zer0"]
description = "Proc macros for InqJet logging library"
documentation = "https://docs.rs/inqjet-macros"
homepage = "https://github.com/Abso1ut3Zer0/inqjet"
repository = "https://github.com/Abso1ut3Zer0/inqjet"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
