[package]
name = "inqjet"
version = "1.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Ultra-fast, low-latency logging for Rust applications"
documentation = "https://docs.rs/inqjet"
readme = "README.md"
keywords = ["logging", "performance", "low-latency", "async", "lock-free"]
categories = ["development-tools::debugging"]

[features]
default = ["log-compat"]
log-compat = ["dep:log"]

[dependencies]
crossbeam-utils = "0.8.21"
log = { version = "0.4.27", features = ["std"], optional = true }
inqjet-macros = { path = "../inqjet-macros", version = "1.0.0" }
nexus-logbuf = "2.1.0"
thiserror = "2.0.12"

[dev-dependencies]
hdrhistogram = "7.5.4"
log = "0.4.27"
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
